Revision history for Perl extension SQL::Maker

1.04

    - support $where as SQL::Maker::Condition at select, update and delete(nihen)
    - support joins at select

1.03

    - support INSERT statement without parameters on SQLite3.
      https://github.com/tokuhirom/SQL-Maker/issues/11
      (requested by forwardever++)

1.02

    - doc fix(reported by xaicron++)

1.01

    - support this form: ['created_on' => { '>', \'DATE_SUB(NOW(), INTERVAL 1 DAY)' }]

1.00

    - remove alpha tag.

0.14

    - Type check for clear error messages(gfx)
    - fixed testing issue on t/10_subquery.t(reported by gfx++)

0.13

    - In SQL::Maker
        - Allow 'INSERT IGNORE' by $opts->{prefix} params at insert() method (zigorou)
        - Accept key-value as array at insert() method (zigorou)
        - Accept value using subquery at insert(), update() method (zigorou)
        - Allow table alias at select() method (zigorou)
    - In SQL::Maker::Plugin::InsertMulti
        - Accept values as arrayref at insert_multi() (zigorou)
        - Allow 'INSERT IGNORE' by $opts->{prefix} params at insert_multi() (zigorou)
        - Allow literal and subquery in values at insert_multi() (zigorou)
        - Supports 'ON DUPLICATE KEY UPDATE' syntax on mysql driver at insert_multi() (zigorou)
    - In SQL::Maker::Select
        - Allow no conditional join (zigorou)

0.12

    SQL::Maker::Plugin::InsertMulti before 0.12 have a critical issue.
    I highly recomment version up to 0.12+, if you are using SQL::Maker::Plugin::InsertMulti.

    - FIX: SQL::Maker::Plugin::InsertMulti doesn't works correctly.
    - doc fix on SQL::Maker::Plugin::InsertMulti

0.11

    - added SQL::Maker#new_condition method(nekokak)

0.10

    - support union, intersect, except(makamaka)

0.09

    - allow SELECT object and alias to add_join(makamaka)

0.08

    - doc enhancements(tokuhirom)
    - support $builder->select(order_by => {foo => 'DESC'}) form for skinny

0.07
